# ablate

./: CMakeLists.txt
config/: findTChem.cmake  findZerork.cmake
docs/sourceDocs/: annotated.html  annotated_dup.js  arbitrary_source_8hpp_source.html  ausm_8hpp_source.html  ausmp_up_8hpp_source.html  average_flux_8hpp_source.html  boundary_function_8hpp_source.html  boundary_process_8hpp_source.html  boundary_solver_8hpp_source.html  box_8hpp_source.html  box_initializer_8hpp_source.html  box_mesh_8hpp_source.html  box_mesh_boundary_cells_8hpp_source.html  builder_8hpp_source.html  cell_initializer_8hpp_source.html  cell_solver_8hpp_source.html  (+467 more)
src/particles/: CMakeLists.txt  burningParticleSolver.cpp  burningParticleSolver.hpp  coupledParticleSolver.cpp  coupledParticleSolver.hpp  fieldDescription.cpp  fieldDescription.hpp  inertial.cpp  inertial.hpp  particleSolver.cpp  particleSolver.hpp  particles.cpp
src/particles/accessors/: CMakeLists.txt  eulerianAccessor.cpp  eulerianAccessor.hpp  mutableSwarmAccessor.hpp
src/particles/drag/: CMakeLists.txt  dragModel.hpp  linear.cpp  linear.hpp  stokes.cpp  stokes.hpp
src/particles/processes/: CMakeLists.txt  arbitraryEulerianSource.cpp  arbitraryEulerianSource.hpp  burningDroplet.cpp  burningDroplet.hpp  burningProcess.hpp  convectiveHeatTransfer.cpp  convectiveHeatTransfer.hpp  coupledDrag.cpp  coupledDrag.hpp  coupledProcess.hpp
src/particles/processes/burningModel/: CMakeLists.txt  noEvaporationConstantBurn.cpp  noEvaporationConstantBurn.hpp  szBurn.cpp  szBurn.hpp  twoZone.cpp  twoZone.hpp  twoZoneBurn.cpp  twoZoneBurn.hpp
src/particles/processes/burningModel/dropletFlame/: cxhyozFlame.hpp  waxFlame.hpp
src/particles/processes/burningModel/liquidFuels/: CMakeLists.txt  liquidFuel.hpp  waxFuel.hpp
src/particles/processes/burnmodel/: burnModel.hpp  constantK.cpp  constantK.hpp  twoZone.cpp  twoZone.hpp  twoZoneBoil.cpp  twoZoneBoil.hpp
(+40 files in other folders)
